@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST Locale-Maketext-Fuzzy-0.02.tar.gz 6344 RMD160 f121c76c7a160346f82b7258cd75b640c403eefc SHA1 061903e6e031c47966a4ed1803fd9ca4e3c24280 SHA256 342955126ac37e6546271e2064fc8327f9b9c4e6c78de0880af97ca61105e65c
 DIST Locale-Maketext-Fuzzy-0.10.tar.gz 29404 RMD160 e0600f7a94d1b0b5010ea45e4b9c155857b35082 SHA1 4d55243c9c0b069dd98cf8cddac43815080f9ce4 SHA256 7a0b457386dc7c4249ba4799de66a4fab47985dca9508f12e8f41b9d9f59dc35
+DIST Locale-Maketext-Fuzzy-0.11.tar.gz 29793 RMD160 d3b1221b9ddeeb172d431041d995a99f9b464855 SHA1 5e3c3b53ca8ecf28feb4c2fac3e5b60c245f795d SHA256 3785171ceb78cc7671319a3a6d8ced9b190e097dfcd9b2a9ebc804cd1a282f96
 EBUILD locale-maketext-fuzzy-0.02.ebuild 625 RMD160 baa017482aed6853e6e9d24c9867e8d85cd8af7c SHA1 4178b8d519ea5910d6110a2d76e7c1d4957e0f75 SHA256 746e70150dd5127264e93c0706c9e742d54218d5e421917fc6bca1a5e254cbb7
 EBUILD locale-maketext-fuzzy-0.100.0.ebuild 503 RMD160 015d67c33d4a4f483e7fb95785bf861dbb2349ea SHA1 36f999f372dcda3bcd713c3a772de5ea7d06ad2e SHA256 fe4401dfda386b81c91ebaf5cea333f29d269506a056c97a6a1d0680e0a6f6af
-MISC ChangeLog 2120 RMD160 8d6a72ff078359b7aaf906d0f3834d4793dfe6e3 SHA1 e923543cdb2f792acff7e5c66d50a9ea95f5d863 SHA256 1c03a10abe0da8eea6d8b505a0cafded1d60deb84e8185aebddbe1400e770812
+EBUILD locale-maketext-fuzzy-0.110.0.ebuild 517 RMD160 5b4b94a08308fa48059bbc0cd739f3dfe7ad8208 SHA1 d558d8709f533d916c247fc9eb98fedecbf7b65b SHA256 f7e8a0be38be9bacc7b9322e8c8b1885e7cbba1641444e5a6ba3e516239c7d96
+MISC ChangeLog 2271 RMD160 dc306fa0e751dfce4a7d7fdb079b50d7b543da8c SHA1 a705c9663d9c77d9af523ae22473dd8b5a98e665 SHA256 a10d6e2b867cedbc1a657b0e6fe05d1daf0aedec3f7ed960fab1b9099609f3a4
 MISC metadata.xml 247 RMD160 9355b4e675ed62e756b63aeaf35cc9bdb42bc767 SHA1 3c923298eb61399b02ccd3d6ea0135cb65465b95 SHA256 49cb12f43d5c0c3193d1c8527eab464fbbd6e62ebb7c211ec0f41d056b034069
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREIAAYFAk5jYD4ACgkQV3J2n04EauzicACg2tNYK11BpauxAwXPTVpkaY8N
-JasAoK6HnHcvdo2ZgUcyNywWJVi6AE7X
-=qwWu
+iEYEAREIAAYFAk7vSYIACgkQV3J2n04Eauz60QCg0ob+HNUIyLqZ/CFTnOYp+v7Q
+624AoM3hqD1/QaZJ135B+Jwbfg0Hg/Tn
+=Hcxm
 -----END PGP SIGNATURE-----
