@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/MooseX-Types-DateTime-ButMaintained
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-Types-DateTime-ButMaintained/ChangeLog,v 1.10 2011/09/04 11:23:39 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MooseX-Types-DateTime-ButMaintained/ChangeLog,v 1.11 2011/12/19 14:24:55 tove Exp $
+
+*MooseX-Types-DateTime-ButMaintained-0.130.0 (19 Dec 2011)
+
+  19 Dec 2011; Torsten Veller <tove@gentoo.org>
+  +MooseX-Types-DateTime-ButMaintained-0.130.0.ebuild:
+  Version bump
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org>
   -MooseX-Types-DateTime-ButMaintained-0.11.ebuild:
